--- a/reactproj/src/style.css
+++ b/reactproj/src/style.css
@@ -110,6 +110,35 @@ body::-webkit-scrollbar-thumb:hover { background: hsl(0, 0%, 70%); }
   #REUSED STYLE
 \*-----------------------------------*/
 
+.search-results {
+  margin-top: 2px;
+  position: absolute;
+  z-index: 3;
+  width: 100%;
+  max-height: 300px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  overflow: hidden;
+  overflow-y: auto;
+}
+.search-results::-webkit-scrollbar {
+  display: none;
+}
+.search-results a:hover {
+  background-color: rgb(228, 228, 228);
+}
+.search-results p {
+  padding: 6px;
+  margin: 3px;
+  font-size: 14px;
+}
+
+i {
+  padding: 5px;
+}
+
+
+
 .container { padding: 0 15px; }
 
 .form-control{
